# pginv

./: .gitignore  Makefile  ansible.cfg  demo.pginv.yaml  pyproject.toml
pginv/: pginv.py
sql/: schema.sql
