[tool.poetry]
name = "pginv"
version = "0.1.0"
description = "Ansible dynamic inventory plugin for PostgreSQL"
authors = ["Alexey Grebenshikov <mi.aleksio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
